<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:foregroundTint="#E10000"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="308dp"
        android:layout_height="47dp"
        android:backgroundTint="@color/purpleTemplate"
        android:drawableTint="#673AB7"
        android:ems="10"
        android:foregroundTint="#673AB7"
        android:hint="@string/labelName"
        android:textColorHint="@color/purpleTemplate"
        android:inputType="textPersonName"
        android:textColor="@color/purpleTemplate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.475" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="307dp"
        android:layout_height="47dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/purpleTemplate"
        android:drawableTint="#673AB7"
        android:ems="10"
        android:hint="@string/labelPassword"
        android:inputType="textPassword"
        android:textColorHint="@color/purpleTemplate"
        android:textColor="@color/purpleTemplate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonSend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintVertical_bias="0.341" />

</androidx.constraintlayout.widget.ConstraintLayout>